--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -681,32 +681,31 @@
         justify-content: center; // Center justify content
 
         span, .localize, * {
-          color: #000000 !important;
-          font-weight: 600 !important;
-          font-size: 14px !important;
-          text-shadow: 0 1px 2px rgba(255, 255, 255, 0.8);
-          line-height: 1.2;
-        }
+        color: #000000 !important; // <-- This is already set to black, but you want even darker (maybe #111111)
+        font-weight: 600 !important;
+        font-size: 14px !important;
+        line-height: 1.2;
+      }
 
         &:hover {
           background: rgba(255, 255, 255, 0.2);
           transform: translateY(-1px);
           
-          span, .localize, * {
-            color: #000000 !important;
-            text-shadow: 0 1px 3px rgba(255, 255, 255, 0.9);
-          }
+         span, .localize, * {
+         color: #111111 !important;
+           text-shadow: none;
+            }
         }
 
         &--active {
           background: rgba(255, 255, 255, 0.9);
           border-color: rgba(59, 130, 246, 0.3);
           
-          span, .localize, * {
-            color: #000000 !important;
+         span, .localize, * {
+            color: #111111 !important;
             font-weight: 700 !important;
-            text-shadow: none;
-          }
+             text-shadow: none;
+         } 
         }
       }  
     }  
